--- a/config/database.yml
+++ b/config/database.yml
@@ -70,18 +70,7 @@ test:
 production:
   primary: &primary_production
     <<: *default
-    database: social_app_production
-    username: social_app
+    database: postgresql
+    username: deploy
+    host: localhost
     password: <%= ENV["SOCIAL_APP_DATABASE_PASSWORD"] %>
-  cache:
-    <<: *primary_production
-    database: social_app_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: social_app_production_queue
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *primary_production
-    database: social_app_production_cable
-    migrations_paths: db/cable_migrate
